tenzir/tests/exec/expr/escape/incomplete_hex.tql
// error

from {
  x: "\x1"
}
